# argos

./: 404.html  LICENSE  Makefile  README.md  demo_unified_client.py  demo_workflow_query_delete.py  example.py  example_new_api.py  index.html  main.py  mkdocs.yml  pyproject.toml  schema.py  sitemap.xml  test_new_api.py  workflows.db
.github/: dependabot.yml
.github/workflows/: docs.yml  tests.yml
argos/: __init__.py
argos/application/: __init__.py  workflow_client.py  workflow_engine.py  workflow_validation.py
argos/domain/: __init__.py
argos/domain/models/: __init__.py  execution_options.py  results.py  steps.py
argos/domain/plugins/: __init__.py  base.py  builtin.py
argos/domain/services/: __init__.py  parameter_binding.py  placeholder_resolution.py  plugin_resolution.py
argos/infrastructure/: __init__.py
argos/infrastructure/execution/: __init__.py  executor_factory.py  map_strategies.py  step_executors.py  task_runner.py
blog/: index.html
docs/: examples.md  index.md  plugins.md  workflows.md
docs/blog/: .authors.yml
examples/: index.html
plugins/: index.html
search/: search_index.json
src/argos/: __init__.py  backend.py  client.py  factory.py
src/aroflow/: __init__.py  backend.py  client.py  factory.py  main.py
src/plugins/: __init__.py
tests/application/: test_adapter.py  test_service.py
tests/client_factory/: test_backend.py  test_client.py  test_factory.py
tests/domain/: test_domain_service.py  test_entity.py  test_port.py  test_value_object.py
tests/integration/: test_end_to_end.py
workflows/: index.html
(+45 files in other folders)
