[project]
name = "aroflow"
version = "0.1.0"
description = "workflows anywhere"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgspec",
    "ruff",
    "pyyaml",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mkdocs",
    "mkdocs-material",
]

[project.optional-dependencies]
test = [
    
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/aroflow",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

[tool.setuptools]
py-modules = []